Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-37491

Changing Attractor system to null make app crashes

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.0.0
    • 5.2.1
    • Quick: Particles
    • None
    • 1
    • 9d19841b053d16157858cf1c48a0143933af2626
    • Qt Quick 3D - Week 45/46

    Description

      If attractor system is set to null programmatically the app crash.

      
      ParticleSytem {
              id: particleSystem
      }
      
      Attractor {
              id: attractor
              system: particleSystem
              anchors.fill: parent
              strength: 2
      
              MouseArea {
                  anchors.fill: parent
      
                  onPressed: {
                       //app crash here
                       attractor.system = null
                  }
              }
          }
      

      Attachments

        1. colored.qml
          5 kB
          Kaj Grönholm
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kagro Kaj Grönholm
            x-krys Christopher Courtois
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes