Allow removing attractor particlesystem at runtime

Don't crash and make it work as expected.

Task-number: QTBUG-37491
Change-Id: I0b94fdfa0a79dd43b762b03b24e3415762eecd95
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>